--- a/oj9_faq.html
+++ b/oj9_faq.html
@@ -76,7 +76,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="section-item-faq">
         <details id="namej9">
           <summary>What does the J9 in OpenJ9 stand for?</summary>
-          <p>To clear up a common misconception, J9 != Java 9. If you are interested in hearing about how it got its name, read this <a href="https://medium.com/@rservant/how-did-the-j9-in-openj9-get-its-name-95a6416b4cb9">blog post</a>.
+          <p>To clear up a common misconception, J9 != Java 9. If you are interested in hearing about how it got its name, read this <a href="https://medium.com/@rservant/how-did-the-j9-in-openj9-get-its-name-95a6416b4cb9" target="_blank">blog post</a>.
           </p>
         </details>
       </div>
@@ -98,17 +98,25 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </p>
         </details>
       </div>
- 
+
+      <div class="section-item-faq">
+        <details id="support">
+          <summary>Which system environments is Eclipse OpenJ9 supported on?</summary>
+          <p>You can find a full support statement in our <a href="https://www.eclipse.org/openj9/docs/openj9_support/" target="_blank">user documentation</a>.</a>.
+          </p>
+        </details>
+      </div>
+	  
 	  <div class="section-item-faq">
         <details id="engage">
           <summary>How can I discuss ideas and provide feedback to this community?</summary>
           <p>There are a number of ways that you can engage with the OpenJ9 community:
 		   <ul>
-			<li>Join our <a href="https://openj9.slack.com/messages/C8312LCV9/">OpenJ9 slack workspace</a> where you can collaborate directly with developers and other contributors on the project. To join slack, <a href="https://www.eclipse.org/openj9/oj9_joinslack.html">request an invitation.</a></li>
-			<li>Join the <a href="https://dev.eclipse.org/mailman/listinfo/openj9-dev">Eclipse mailing list</a> and post a message to our development community.</li>
+			<li>Join our <a href="https://openj9.slack.com/messages/C8312LCV9/" target="_blank">OpenJ9 slack workspace</a> where you can collaborate directly with developers and other contributors on the project. To join slack, <a href="https://www.eclipse.org/openj9/oj9_joinslack.html" target="_blank">request an invitation.</a></li>
+			<li>Join the <a href="https://dev.eclipse.org/mailman/listinfo/openj9-dev" target="_blank">Eclipse mailing list</a> and post a message to our development community.</li>
 			<li>Come along to our regular hangouts, where you can speak to OpenJ9 developers directly, ask questions, and share your experiences. Schedules and agendas for hangouts are posted in the #planning channel of the OpenJ9 slack workspace.</li>
-			<li>Create an issue in our <a href="https://github.com/eclipse/openj9/issues">OpenJ9 GitHub repository</a>.</li>
-			<li>If you want to keep up to date with the latest news from the project, why not follow us on <a href="https://twitter.com/openj9">twitter</a>, <i>@openj9</i>.</li>
+			<li>Create an issue in our <a href="https://github.com/eclipse/openj9/issues" target="_blank">OpenJ9 GitHub repository</a>.</li>
+			<li>If you want to keep up to date with the latest news from the project, why not follow us on <a href="https://twitter.com/openj9" target="_blank">twitter</a>, <i>@openj9</i>.</li>
 		   </ul></p>
         </details>
       </div>
@@ -123,14 +131,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="section-item-faq">
         <details id="clone">
           <summary>Why do I clone from https://github.com/ibmruntimes/openj9-openjdk-jdk8?</summary>
-          <p>It is necessary to apply patches on top of OpenJDK for it to function correctly with Eclipse OpenJ9. The <a href="https://github.com/ibmruntimes/openj9-openjdk-jdk8">https://github.com/ibmruntimes/openj9-openjdk-jdk8</a> repository contains a recent version of OpenJDK, taken from the OpenJDK repository with additional fixes applied.</p>
+          <p>It is necessary to apply patches on top of OpenJDK for it to function correctly with Eclipse OpenJ9. The <a href="https://github.com/ibmruntimes/openj9-openjdk-jdk8" target="_blank">https://github.com/ibmruntimes/openj9-openjdk-jdk8</a> repository contains a recent version of OpenJDK, taken from the OpenJDK repository with additional fixes applied.</p>
         </details>
       </div>
 
       <div class="section-item-faq">
         <details id="performance">
           <summary>I think I've found a performance issue... How can I be sure?</summary>
-           <p>Firstly, we appreciate you taking the time to evaluate the performance. We would like to encourage you to open a <a href="https://github.com/eclipse/openj9/issues">Github issue</a> if you notice an area where you think we can improve. Please tell us about your application, the Java command-line options that you used, and any other relevant information to help us re-create and investigate the issue.
+           <p>Firstly, we appreciate you taking the time to evaluate the performance. We would like to encourage you to open a <a href="https://github.com/eclipse/openj9/issues" target="_blank">Github issue</a> if you notice an area where you think we can improve. Please tell us about your application, the Java command-line options that you used, and any other relevant information to help us re-create and investigate the issue.
           </p>
           <p>While we are constantly striving for good performance in as many cases as possible, there are reasons why performance characteristics might be different when running OpenJDK with the OpenJ9 JVM, compared to other JVM implementations.
           </p>
@@ -150,7 +158,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="section-item-faq">
         <details id="more">
           <summary>Where can I learn more about OpenJ9?</summary>
-          <p>You'll find a list of links to recent articles, blog posts, and slides on the separate <a href="oj9_resources.html">Resources</a> page.
+          <p>You'll find a list of links to recent articles, blog posts, and slides on the <a href="oj9_resources.html">Resources</a> page. To find out how to configure, tune, and diagnose application problems when running in a JDK that contains OpenJ9, read our <a href="https://www.eclipse.org/openj9/docs/" target="_blank">user documentation</a>.
           </p>
         </details>
       </div>
